assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@1,700&family=Work+Sans:wght@300&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}


body {
    font-family: "Work Sans", sans-serif;
    font-weight: 300;
}

/* headings and logo */

/* make header stick to top of page */
header {
    position: fixed;
    width: 100%;
    height: 85px;
    z-index: 3;
}


h1, h2 {
    font-family: "Epilogue", sans-serif;
}

h2 {
    font-size: 180%;
    padding-bottom: 2%;
}

#logo {
    font-family: "Epilogue", sans-serif;
    font-size: 240%;
    font-style: italic;
    letter-spacing: 2px;
}

/* navigation links */
  
#menu {
     font-size: 130%;
     background-color: #f6f4e8;
     color: #1d3124;
     line-height: 85px;

     display: flex;
     justify-content: space-between;
}

#menu li {
    list-style-type: none;
    padding: 0 1%;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover { 
    background-color: #e59560;
    transition: 0.4s;
    border-radius: 10px;
    padding: 2px;
}

#sign-up {
    border: 1px solid #1d3124;
    padding: 2px;
    border-radius: 10px;
}

/* hero image and cover text */

#hero-outer {
    height: 500px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 500px;
    width: 100%;
    background: url('../images/man-meditating-on-dock.jpg') no-repeat center center;
    background-size: cover;

/* animates zoom effect on home page */

animation-name: hero-zoom;
animation-duration: 5s;
animation-fill-mode: backwards;
}

/* creates level of zoom for hero image */

@keyframes hero-zoom {
    from{
        transform: scale(1.1);
    }
    to {
        transform: scale(1.0);
    }
}

.cover-text {
        font-size: 140%;
        font-family: Epilogue, sans-serif;
        letter-spacing: 3px;
    
        width: 400px;
        height: 90px;
    
        padding-top: 40px;
        padding-left: 10px;
    
        background-color: rgba(229, 149, 96, 0.6);
        backdrop-filter: blur(5px);
    
        bottom: 50%;
        left: 35%;
        position: absolute;
        border-radius: 15px;
}

.cover-text, .cover-text h2 {
    color: #f6f4e8;
    text-align: center;
}

/* ways to release section */

#ways-to-release {
    background-color: #bacec1;
    height: fit-content;
    padding: 5% 0;
    width: 100%;
    color: #1d3124;
    text-align: center;
}

/* meditation and yoga cards */

.card-wrapper {
    font-size: 140%;

    display: flex;
    justify-content: space-evenly;
}

#middle-card {
    width: 20%;
    margin: auto;
}

.card {
    font-size: 140%;
    font-family: Epilogue, sans-serif;
    background-color: #f6f4e8;
    text-decoration: none;
    color: #1d3124;

    height: 250px;
    width: 20%;
    border: 2px solid #1d3124;
    border-radius: 15px;

    margin: auto;
}

.card h3 {
    padding-top: 25%;
}


/* sets orange nav hover across site */

#ways-to-release a:hover, #newsletter a:hover {
    color: #f6f4e8;
    background-color: #e59560;
    transition: 0.4s;
}

/* newsletter section of index.html */

#newsletter {
    background-color: #f6f4e8;
    height: fit-content;
    padding: 5% 0;
    width: 100%;
    color: #1d3124;
    text-align: center;

    display: flex;
    justify-content: space-evenly;
}

#newsletter div {
    margin: auto;
}

.bottom-card {
    font-size: 120%;
    font-family: "Work Sans", sans-serif;
    background-color: #bacec1;
    text-decoration: none;
    color: #1d3124;

    height: 250px;
    width: 20%;
    border: 2px solid #1d3124;
    border-radius: 15px;

    margin: auto;
}

.bottom-card p {
    padding-top: 25%;
}

#woods-meditation-img {
    background-image: url(../images/meditation-woods.jpg);
    background-size: cover;
    background-position: center;
    height: 250px;
    width: 20%;

    margin: auto;
}

#correlation-graph {
    height: 250px;
    width: 90%;

    border: 2px solid #1d3124;
    border-radius: 15%;
}

/* footer */

.footer {
    height: 85px;
    display: flex;
    justify-content: space-evenly;

    background-color: #1d3124;
    color: #f6f4e8;
}

.footer p {
    margin: auto;
}

.social-networks {
    text-align: center;
    margin: auto;
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 160%;
    color: #f6f4e8;
}

/* Meditation page */

/*Meditation hero image and cover text*/

#meditation-hero-outer {
    height: 500px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#meditation-hero-image {
    height: 500px;
    width: 100%;
    background: url('../images/woman-meditating.jpeg') no-repeat center 70%;
    background-size: cover;
}

/* Intro to meditation section */

.intro-method {
    background-color: #bacec1;
    height: fit-content;
    padding: 5% 0;
    width: 100%;
    color: #1d3124;
    padding-top: 5%;
}

.method-card {
    height: 250px;
    width: 40%;
    font-size: 80%;
    margin: auto;
    text-align: center;
}

.method-card li {
    text-align: left;
}

/* how to meditate section */

.how-method {
    background-color: #f6f4e8;
    height: fit-content;
    padding: 5% 0;
    width: 100%;
    color: #1d3124;
    text-align: center;
    margin: auto;
    padding-top: 5%;
}

.how-method p {
    font-size: 120%;
    padding-bottom: 2%;
}

.how-method-wrapper {
    justify-content: space-evenly;
    display: flex;
    margin: auto;
}

.how-method-inner {
    float: left;
    margin: auto;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding-right: 5%;
}

#meditation-video {
    width: 50%;
    height: 400px;
    border-radius: 15px;
    border: 2px solid #1d3124;
}

#meditation-pose {
    width: 40%;
    height: 40%;
    border-radius: 15px;
    border: 2px solid #1d3124;
}

.method-steps{
    width: 40%;
    margin: auto;
    padding: 3%;
    font-size: 100%;
}
/* ... */

